// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldAction is rendered 1`] = `
<div
  className="osdFieldButton"
>
  <button
    className="osd-resetFocusState osdFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="osdFieldButton__name"
    >
      name
    </span>
  </button>
  <div
    className="osdFieldButton__fieldAction"
  >
    <span>
      fieldAction
    </span>
  </div>
</div>
`;

exports[`fieldIcon is rendered 1`] = `
<div
  className="osdFieldButton"
>
  <button
    className="osd-resetFocusState osdFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="osdFieldButton__fieldIcon"
    >
      <span>
        fieldIcon
      </span>
    </span>
    <span
      className="osdFieldButton__name"
    >
      name
    </span>
  </button>
</div>
`;

exports[`isActive defaults to false 1`] = `
<div
  className="osdFieldButton"
>
  <button
    className="osd-resetFocusState osdFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="osdFieldButton__name"
    >
      name
    </span>
  </button>
</div>
`;

exports[`isActive renders true 1`] = `
<div
  className="osdFieldButton osdFieldButton-isActive"
>
  <button
    className="osd-resetFocusState osdFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="osdFieldButton__name"
    >
      name
    </span>
  </button>
</div>
`;

exports[`isDraggable is rendered 1`] = `
<div
  className="osdFieldButton osdFieldButton--isDraggable"
>
  <button
    className="osd-resetFocusState osdFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="osdFieldButton__name"
    >
      name
    </span>
  </button>
</div>
`;

exports[`sizes m is applied 1`] = `
<div
  className="osdFieldButton"
>
  <button
    className="osd-resetFocusState osdFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="osdFieldButton__name"
    >
      name
    </span>
  </button>
</div>
`;

exports[`sizes s is applied 1`] = `
<div
  className="osdFieldButton osdFieldButton--small"
>
  <button
    className="osd-resetFocusState osdFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="osdFieldButton__name"
    >
      name
    </span>
  </button>
</div>
`;
